cmake_minimum_required(VERSION 3.21)
project(lecture05Examples)

set(CMAKE_CXX_STANDARD 14)

add_executable(01Scope 01Scope.cpp)
add_executable(02WhileLoop 02WhileLoop.cpp)
add_executable(03DoWhile 03DoWhile.cpp)
add_executable(04WhileLoopDemo 04WhileLoopDemo.cpp)
add_executable(05ForLoop 05ForLoop.cpp)
add_executable(06CodeySense 06CodeySense.cpp)
add_executable(07FizzBuzz1 07FizzBuzz1.cpp)
add_executable(08FizzBuzz2 08FizzBuzz2.cpp)
